Modification des cinémas pour adapter à Nantes

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 <img src="../static/images/background.svg" class="background_svg">
 
 
-<div id="map"></div>
+<!-- <div id="map"></div> -->
 
 <div class="planning">
     <div class="container_titrePlanning">
@@ -88,7 +88,7 @@
 
 
 
-<script>
+<!-- <script>
     mapboxgl.accessToken = {{ mapbox_token | tojson }};
 
     var map = new mapboxgl.Map({
@@ -113,7 +113,7 @@
             .setPopup(popup)
             .addTo(map);
     });
-</script>
+</script> -->
 
 
 {% endblock %}
