--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
-    <!-- <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js'></script> -->
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js'></script>
     <link rel="shortcut icon" type="image/png" href="static/images/favicon.png"/>
     <title>{{ website_title }}</title>
     {% block head %} {% endblock %}
@@ -14,7 +14,6 @@
 <header id="headerTop">
     <div class="divHeader">
         <h1 class="textLogo_header">{{ website_title }}</h1>
-        <p>Quand ça va pas, y aura toujours le cinéma</p>
     </div>
 </header>
 <body>
@@ -23,8 +22,7 @@
 
 <footer>
     <div class="container_footer">
-        <p>Fait avec amour par Solène Derniaux</p>
-        <p>©Tous droits réservés</p>
+        <p>A partir d'une idée originale de <a class="reference-link" href="https://www.youtube.com/Sol%C3%A8neDRN">Solène Derniaux</a></p>
     </div>
 </footer>
 </html>
