--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
         <div class="infoFilm">
             <div class="blur-background"></div>
             <div>
-                <h3 class="titreFilm"><a href="{{ film.url }}">{{film.title}}</a></h3>
+                <h3 class="titreFilm"><a href="{{ film.url }}" target="_blank">{{film.title}}</a></h3>
                 <div class="info-content">
                     <p class="realisateur">Réalisateur : {{film.director}}</p>
                     <p class="casting">Casting : {{ film.casting }}</p>
@@ -69,7 +69,9 @@
     {% for cinename, seances in film.seances.items() %}
     <div class="seance_container">
         <div class="cinema">
-            <p>{{cinename}}</p>
+            <p><a href="{{theater_urls.get(cinename)}}" target="_blank" rel="noopener noreferrer">
++                {{cinename | replace('+', '')}}
++            </a></p>
         </div>
         <div class="horaires_container">
             {% for seance in seances %}
