add supabase management in front end

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,8 +70,8 @@
     <div class="seance_container">
         <div class="cinema">
             <p><a href="{{theater_urls.get(cinename)}}" target="_blank" rel="noopener noreferrer">
-+                {{cinename | replace('+', '')}}
-+            </a></p>
+              {{cinename | replace('+', '')}}
+           </a></p>
         </div>
         <div class="horaires_container">
             {% for seance in seances %}
