fix html template

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
     <div class="seance_container">
         <div class="cinema">
             <p><a href="{{theater_urls.get(cinename)}}" target="_blank" rel="noopener noreferrer">
-              {{cinename | replace('+', '')}}
+              {{cinename}}
            </a></p>
         </div>
         <div class="horaires_container">
