--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 <div class="planning">
     <div class="container_titrePlanning">
         <div class="contenu_edt">
-            <h2 class="txt_edt">Emploi du temps</h2>
+            <h2 class="txt_edt">Séances</h2>
             <div class="calendrier">
             {% for date in dates %}
                 {% if date.choisi %}
