--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,6 +19,7 @@ h1 h2 h3 {
 
 h3 {
     font-size: 24px;
+    margin: 0.5rem;
 }
 
 .background_svg {
@@ -30,8 +31,8 @@ h3 {
 }
 
 p {
-    font-size: 20;
     font-family: 'VendSans', sans-serif;
+    margin: 0.2rem;
 }
 
 .divHeader {
@@ -41,6 +42,22 @@ p {
     flex-direction: row;
     align-items: baseline;
     justify-content: space-between;
+}
+
+.input-search {
+    margin-bottom: 1rem;
+    width: 15rem;
+    padding: 0.5rem;
+    display: flex;
+    margin-left: 10%;
+    border-radius: 5rem;
+    border: solid gray 0.15rem;
+    outline: none;
+    transition: 0.5s;
+}
+
+.input-search:focus {
+    border: solid #444cf7 0.15rem;
 }
 
 #map {
@@ -59,12 +76,11 @@ p {
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 }
 
-/* 444cf7 */
 
 .container_titrePlanning,
 .container_infoFilm {
-    margin-left: 10%;
     margin-right: 10%;
+    margin-left: 10%;
 }
 
 .line {
@@ -76,7 +92,7 @@ p {
 }
 
 .container_titrePlanning {
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .affiche {
@@ -89,33 +105,25 @@ p {
 .container_infoFilm {
     position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
-.blur-background {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(255, 255, 255, 0.3);
-    backdrop-filter: blur(20px);
-    z-index: -1;
-    border-radius: 20px;
-    filter: drop-shadow(0 -6mm 4mm rgba(2, 2, 2, 0.2));
-    filter: drop-shadow(2mm 6mm 6mm rgba(2, 2, 2, 0.2));
+.film-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    margin-bottom: 2rem;
+}
+
+.film-content {
+    display: flex;
+    flex-direction: row;
+    box-shadow: 0px 2px 15px 1px rgba(2,2,2,0.1)
 }
 
 .info-content {
     position: relative;
     z-index: 1;
-}
-
-.realisateur,
-.duree,
-.casting,
-.genre {
-    margin-top: -20px;
 }
 
 .date {
@@ -126,6 +134,7 @@ p {
     width: 80px;
     height: 100px;
     justify-content: center;
+    gap: 0.5rem;
 }
 
 .date-selectionne {
@@ -151,6 +160,7 @@ p {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    font-size: 15px;
 }
 
 .chiffre {
@@ -158,10 +168,6 @@ p {
     font-size: 42px;
     margin-top: -20px;
     margin-bottom: -20px;
-}
-
-.duree {
-    margin-bottom: 45px;
 }
 
 .cinema {
@@ -185,7 +191,6 @@ p {
 
 .seance_container {
     margin-right: 10%;
-    margin-left: 10%;
     display: flex;
     flex-direction: row;
 }
@@ -208,9 +213,9 @@ p {
     align-items: center;
     justify-content: center;
     margin-left: 10px;
-    filter: drop-shadow(2mm 6mm 6mm rgba(2, 2, 2, 0.2));
     flex-shrink: 0;
     flex-grow: 0;
+    border: rgba(0,0,0,0.1) solid 0.1px;
 }
 
 footer {
@@ -223,6 +228,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    opacity: 0.5;
 }
 
 .contenu_edt {
@@ -237,8 +243,7 @@ footer {
 }
 
 .synopsis_container {
-    max-width: 800px;
-    margin-right: 10%;
+    padding: 1rem 1rem 1rem 0;
 }
 
 .synopsis {
@@ -256,7 +261,7 @@ footer {
     height: 100px;
     justify-content: center;
     filter: drop-shadow(2mm 6mm 6mm rgba(2, 2, 2, 0.2));
-    transition: all 0.2s ease-in-out;
+    transition: all 0.2s;
 }
 
 a {
@@ -385,7 +390,7 @@ html {
     
     .mois {
         margin-bottom: 20px;
-        font-size: 10px;
+        font-size: 8px;
     }
     
     .calendrier {
@@ -418,15 +423,7 @@ html {
         margin-block-start: 5px;
         margin-block-end: 5px;
     }
-    .realisateur,
-    .duree,
-    .casting,
-    .genre {
-        margin-block-start: 0;
-        margin-block-end: 0;
-        font-size: 10px;
-        margin-right: 5px;
-    }
+
     .synopsis{
         display: none;
     }
@@ -489,7 +486,6 @@ html {
         backdrop-filter: blur(20px);
         z-index: -1;
         border-radius: 5px;
-        filter: drop-shadow(0 -6mm 4mm rgba(2, 2, 2, 0.2));
         filter: drop-shadow(2mm 6mm 6mm rgba(2, 2, 2, 0.4));
     }
     footer {
