--- a/templates/base.html
+++ b/templates/base.html
@@ -25,5 +25,4 @@
         <p>A partir d'une idée originale de <a class="reference-link" href="https://www.youtube.com/Sol%C3%A8neDRN">Solène Derniaux</a></p>
     </div>
 </footer>
-<script src="../script.js"></script>
-</html>
+<script src="{{ url_for('static', filename='js/search.js') }}"></script></html>
