--- a/static/css/main.css
+++ b/static/css/main.css
@@ -95,6 +95,35 @@ p {
     margin-top: 20px;
 }
 
+.titreFilm {
+    margin: 0.5rem 0.5rem 0.5rem 0.2rem;
+    transition: all 0.2s;
+}
+
+.titreFilm > a {
+    position: relative;
+    transition: 0.2s;
+}
+
+/* .titreFilm > a:hover {
+    color: #444cf7;
+} */
+
+.titreFilm > a::after {
+    content: '';
+    position: absolute;
+    height: 0.2rem;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    background: #444cf7;
+    transition: width 0.2s;
+}
+
+.titreFilm > a:hover::after {
+    width: 100%;
+}
+
 .affiche {
     width: 200px;
     height: 288px;
@@ -183,6 +212,21 @@ p {
     filter: drop-shadow(2mm 6mm 6mm rgba(2, 2, 2, 0.2));
     flex-shrink: 0;
     flex-grow: 0;
+    transition: all 0.2s;
+}
+
+.cinema:hover {
+    background-color: white;
+    color: #444cf7;
+    border: #444cf7 solid 0.1px;
+}
+
+.cinema > a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
 }
 
 .horaire_container {
@@ -228,7 +272,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    opacity: 0.5;
+    opacity: 0.7;
 }
 
 .contenu_edt {
@@ -418,7 +462,7 @@ html {
         height: 144px;
         padding-right: 10px;
     }
-    .titreFilm{
+    .titreFilm {
         font-size: 18px;
         margin-block-start: 5px;
         margin-block-end: 5px;
