--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     </div>
 </a>
 
-<img src="../static/images/background.svg" class="background_svg">
+<img src="../static/images/background.svg" class="background_svg" aria_hidden="true"/>
 
 
 <!-- <div id="map"></div> -->
@@ -70,7 +70,7 @@
         {% for cinename, seances in film.seances.items() %}
             <div class="seance_container">
                 <div class="cinema">
-                    <p><a href="{{theater_urls.get(cinename)}}" target="_blank" rel="noopener noreferrer">{{cinename}}</a></p>
+                    <a href="{{theater_urls.get(cinename)}}" target="_blank" rel="noopener noreferrer">{{cinename}}</a>
                 </div>
                 <div class="horaires_container">
                     {% for seance in seances %}
