add filters by theaters

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,4 +27,5 @@
 </footer>
 <script src="{{ url_for('static', filename='js/search.js') }}"></script>
 <script src="{{ url_for('static', filename='js/pin.js') }}"></script>
+<script src="{{ url_for('static', filename='js/filters.js') }}"></script>
 </html>
