--- a/static/css/main.css
+++ b/static/css/main.css
@@ -44,6 +44,41 @@ p {
     justify-content: space-between;
 }
 
+.mobile-filter-button {
+    position: fixed;
+    z-index: 100;
+    top: 1rem;
+    right: 1rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    border: none;
+    background-color: transparent;
+}
+
+.mobile-filter-container {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0rem;
+    right: 0rem;
+    background-color: white;
+    padding: 2rem;
+    z-index: 50;
+}
+
+.mobile-theater-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 50%;
+    margin: 2rem auto;
+}
+
+.visible {
+    display: flex;
+}
+
 .input-search {
     margin-bottom: 1rem;
     width: 15rem;
@@ -60,22 +95,32 @@ p {
     border: solid #444cf7 0.15rem;
 }
 
-#map {
+.filter-container {
     margin-left: 10%;
-    margin-right: 10%;
-    height: 500px;
-    border-radius: 10px;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
 }
 
-.custom-marker {
+.theater-filter {
+    padding: 0.5rem 1rem;
+    border: solid gray 0.1rem;
+    border-radius: 5rem;
+    background-color: white;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.theater-filter.active {
     background-color: #444cf7;
-    border: 2px solid #fff;
-    border-radius: 50%;
-    width: 15px;
-    height: 15px;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+    color: white;
 }
 
+.theater-filter:hover {
+    background-color: #444cf7;
+    color: white;
+}
 
 .container_titrePlanning,
 .container_infoFilm {
@@ -412,16 +457,7 @@ html {
         display: flex;
         flex-direction: column;    
     }
-    #map {
-        max-width: 100vw;
-        height: 400px;
-        border-radius: 5px;
-    }
-    body {
-        margin: 0;
-        padding: 0;
-        overflow-y: auto;
-    }
+
     .divHeader {
         flex-direction: column;
         max-width: 80vw;
@@ -430,10 +466,15 @@ html {
         margin-block-start: 15px;
         margin-block-end: 0;
     }
-    p{
+    p {
         font-size: 12px;
         margin-block-start: -5px;
     }
+
+    .filter-container {
+        display: none;
+    }
+
     .date {
         width: 40px;
         height: 50px;
@@ -488,6 +529,7 @@ html {
         width: 100px;
         color: white;
         padding-right: 5px;
+        font-size: 12px;
     }
     .horaires_container {
         max-width: 250px;
