--- a/static/css/main.css
+++ b/static/css/main.css
@@ -480,6 +480,16 @@ html {
         display: none;
     }
 
+    .theater-filter:hover {
+        background-color: white;
+        color: black;
+    }
+
+    .theater-filter.active {
+        background-color: #444cf7;
+        color: white;
+    }
+
     .date {
         width: 40px;
         height: 50px;
