--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preload" href="{{url_for('static', filename='css/main.css')}}" as="style">
     <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
     <link rel="shortcut icon" type="image/png" href="static/images/favicon.png"/>
     <title>{{ website_title }}</title>
@@ -23,7 +24,7 @@
         <p>A partir d'une idée originale de <a class="reference-link" href="https://www.youtube.com/Sol%C3%A8neDRN">Solène Derniaux</a></p>
     </div>
 </footer>
-<script src="{{ url_for('static', filename='js/search.js') }}"></script>
-<script src="{{ url_for('static', filename='js/pin.js') }}"></script>
-<script src="{{ url_for('static', filename='js/filters.js') }}"></script>
+<script src="{{ url_for('static', filename='js/search.js') }}" defer></script>
+<script src="{{ url_for('static', filename='js/pin.js') }}" defer></script>
+<script src="{{ url_for('static', filename='js/filters.js') }}" defer></script>
 </html>
