--- a/templates/base.html
+++ b/templates/base.html
@@ -11,19 +11,16 @@
 </head>
 
 <header id="headerTop">
-    <div class="divHeader">
-        <h1 class="textLogo_header">{{ website_title }}</h1>
-    </div>
+    <h1 class="textLogo_header">{{ website_title }}</h1>
 </header>
 <body>
     {% block body %} {% endblock %}
 </body> 
 
 <footer>
-    <div class="container_footer">
-        <p>A partir d'une idée originale de <a class="reference-link" href="https://www.youtube.com/Sol%C3%A8neDRN">Solène Derniaux</a></p>
-    </div>
+    <p>Réalisé par <a href="https://github.com/Bcharier" class="reference-link">Baptiste Charier</a> à partir d'une idée originale de <a class="reference-link" href="https://www.youtube.com/Sol%C3%A8neDRN">Solène Derniaux</a></p>
 </footer>
+
 <script src="{{ url_for('static', filename='js/search.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/pin.js') }}" defer></script>
 <script src="{{ url_for('static', filename='js/filters.js') }}" defer></script>
