--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Toutes les séances de cinéma de la métropole nantaise en un seul endroit"
     <link rel="preload" href="{{url_for('static', filename='css/main.css')}}" as="style">
     <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
     <link rel="shortcut icon" type="image/png" href="static/images/favicon.png"/>
